crates/ink/tests/ui/contract/fail/message-input-pattern.stderr
error: ink! message arguments must have an identifier
  --> tests/ui/contract/fail/message-input-pattern.rs:13:31
   |
13 |         pub fn message(&self, (_a, _b): (i32, i32)) {}
   |                               ^^^^^^^^^^^^^^^^^^^^
